# hyw_augment

./: .gitignore  README.md  hyw_augment.toml  pyproject.toml
.github/workflows/: ci.yml
src/hyw_augment/: __init__.py  apertium.py  calfa.py  cli.py  coverage.py  derivation.py  engine.py  glossary.py  nayiri.py  orthography.py  spelling.py
tests/: TESTS.md  conftest.py  test_apertium.py  test_basics.py  test_calfa.py  test_cli.py  test_conllu.py  test_engine.py  test_glossary.py  test_integration.py  test_nayiri.py  test_orthography.py  test_spelling.py
tools/: extract_words_from_UD.py
