[project]
name = "hyw_augment"
version = "0.1.0"
description = "Western Armenian morphological augmentation layer for LLMs"
requires-python = ">=3.11"
license = {text = "MPL 2.0"}
authors = [
    {name = "Iskandar"},
]

dependencies = []

[project.scripts]
hyw-augment = "hyw_augment.cli:main"

[project.optional-dependencies]
dev = [
    "ipython",
    "pytest",
    "ruff",
]
ollama = [
    "ollama",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort
